--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                 <!-- Normale tekst -->
                 <div class="about-text">
                     <p>
-                        Mijn naam is Tobias Groen. Ik ben student Business Innovation aan het Avans hogeschool in Den Bosch. Mijn opleiding is vrij breed en wij hebben keuzevakken. Door succes en interesse in de keuzevakken "disruptive technology", "Big data" en "Digital Solutions" ben ik op deze minor terecht gekomen. Het thema Smart Industry sprak mij gelijk aan en ik wou mijn skills verbeteren. Graag neem ik jullie mee op reis in mijn Smart Industry Journey.
+                        Mijn naam is Kate Winslet. Ik ben student Business Innovation aan het Avans hogeschool in Den Bosch. Mijn opleiding is vrij breed en wij hebben keuzevakken. Door succes en interesse in de keuzevakken "disruptive technology", "Big data" en "Digital Solutions" ben ik op deze minor terecht gekomen. Het thema Smart Industry sprak mij gelijk aan en ik wou mijn skills verbeteren. Graag neem ik jullie mee op reis in mijn Smart Industry Journey.
                     </p>
                 </div>
                 <!-- Normale tekst -->
