--- a/index.html
+++ b/index.html
@@ -725,10 +725,10 @@ Zelf ben ik best bekend met het maken van een BMC omdat dit vrij normaal was om 
                 <img src="img/Smartbuscomp1.png" alt="Image" style="width:70%">
             </div>
             <div class="about-img">
-                <img src="img/Smartbuscomp2.png" alt="Image" style="width:70%">
+                <img src="img/smartbuscomp2.png" alt="Image" style="width:70%">
             </div>
             <div class="about-img">
-                <img src="img/Smartbuscomp3.png" alt="Image" style="width:70%">
+                <img src="img/smartbuscomp3.png" alt="Image" style="width:70%">
             </div>
             <div class="about-text">
                 <p>
